--- a/IKitaplik.Web/Views/_ViewImports.cshtml
+++ b/IKitaplik.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using IKitaplik.Web
 @using IKitaplık.Entities.Concrete;
+@using IKitaplık.Entities.DTOs;
 @namespace IKitaplik.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
