--- a/IKitaplik.Web/Views/Shared/_Layout.cshtml
+++ b/IKitaplik.Web/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - IKitaplik.Web - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2024 - Hakları Hamza Irmak Tarafından Saklıdır - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
