--- a/IKitaplik.Web/Views/Shared/_Layout.cshtml
+++ b/IKitaplik.Web/Views/Shared/_Layout.cshtml
@@ -23,10 +23,10 @@
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Ana Sayfa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark"  asp-controller="Book" asp-action="Add">Kitap Ekle</a>
-                        </li>  
+                            <a class="nav-link text-dark"  asp-controller="Book" asp-action="GetAll">Kitaplar</a>
+                        </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark"  asp-controller="Book" asp-action="GetAll">Kitapları Listele</a>
+                            <a class="nav-link text-dark" asp-controller="Student" asp-action="GetAll">Öğrenciler</a>
                         </li>
                     </ul>
                 </div>
@@ -41,7 +41,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Hakları Hamza Irmak Tarafından Saklıdır - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2025 - Hakları Hamza Irmak Tarafından Saklıdır - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
