--- a/IKitaplik.Web/Views/_ViewImports.cshtml
+++ b/IKitaplik.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using IKitaplık.Entities.Concrete;
 @using IKitaplık.Entities.DTOs;
 @namespace IKitaplik.Web.Pages
+@using IKitaplik.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
