Student adding and listing operations have been completed

--- a/IKitaplik.Web/Views/Book/GetAll.cshtml
+++ b/IKitaplik.Web/Views/Book/GetAll.cshtml
@@ -9,7 +9,7 @@
         </div>
         <div class="col-md-5 col-lg-4">
             <form method="get" action="GetAll" class="input-group">
-                <input name="kitapAdi" type="text" placeholder="Arama Yapınız" class="form-control" aria-describedby="button-ara"/>
+                <input name="bookName" type="text" placeholder="Arama Yapınız" class="form-control" aria-describedby="button-ara"/>
                 <button type="submit" class="btn btn-primary input-group-text" id="button-ara">Ara</button>
             </form>
         </div>
