--- a/IKitaplik.BlazorUI/Components/Pages/Books/BookList.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Books/BookList.razor
@@ -1,18 +1,14 @@
 ﻿@page "/books/list"
 
-@using System.Net.Http.Json
-@using IKitaplik.Entities.DTOs.BookDTOs
-@using MudBlazor
-@using System.Net
-@using System.Text.Json
-@inject IHttpClientFactory HttpClientFactory
+@inject HttpClient httpClient
 @inject ISnackbar Snackbar
 @inject JwtAuthenticationStateProvider AuthProvider
+@inject NavigationManager Nav
 
 
 @if (error)
 {
-    <MudAlert Severity="Severity.Error" Class="mb-4" CloseIcon="@Icons.Material.Filled.Close">
+    <MudAlert Severity="Severity.Error" Class="m-4" CloseIcon="@Icons.Material.Filled.Close">
         <MudText>@errorMessage</MudText>
     </MudAlert>
 }
@@ -21,7 +17,7 @@ else
     <MudTable Items="@Elements" Hover="true" ReadOnly="true" Filter="new Func<BookGetDTO, bool>(FilterFunc)"
               SortLabel="Sort By" CommitEditTooltip="Commit Edit">
         <ToolBarContent>
-            <MudText Typo="Typo.h6">Periodic Elements</MudText>
+            <MudText Typo="Typo.h6">Kitaplar</MudText>
             <MudSpacer />
             <MudTextField @bind-Value="searchString" Placeholder="Search" Adornment="Adornment.Start" AdornmentIcon="@Icons.Material.Filled.Search" IconSize="Size.Medium" Class="mt-0"></MudTextField>
         </ToolBarContent>
@@ -57,15 +53,14 @@ else
     private string searchString = "", errorMessage = "";
     private IEnumerable<BookGetDTO> Elements = new List<BookGetDTO>();
     private bool error = false;
-    private HttpClient httpClient;
 
 
     protected override async Task OnInitializedAsync()
     {
-        //await AuthProvider.InitializeAsync();
-        httpClient = HttpClientFactory.CreateClient("DefaultClient");
+        var token = await AuthProvider.GetToken();
 
-        var request = new HttpRequestMessage(HttpMethod.Get, "book/getall");
+        var request = new HttpRequestMessage(HttpMethod.Get, "http://localhost:5000/api/book/getall");
+        request.Headers.Authorization = new AuthenticationHeaderValue("Bearer", token);
 
         var res = await httpClient.SendAsync(request);
 
