--- a/IKitaplik.BlazorUI/Components/_Imports.razor
+++ b/IKitaplik.BlazorUI/Components/_Imports.razor
@@ -12,6 +12,10 @@
 @using IKitaplik.BlazorUI.Responses
 @using System.Text.Json
 @using System.Text
-@using IKitaplik.BlazorUI.Helpers
 @using Microsoft.AspNetCore.Components.Server.ProtectedBrowserStorage
 @using Microsoft.AspNetCore.Components.Authorization
+@using Blazored.LocalStorage
+@using System.Net.Http.Headers
+@using IKitaplik.Entities.DTOs.BookDTOs
+@using System.Net
+@using IKitaplik.Entities.DTOs.UserDTOs
