--- a/IKitaplik.BlazorUI/Components/_Imports.razor
+++ b/IKitaplik.BlazorUI/Components/_Imports.razor
@@ -19,3 +19,5 @@
 @using IKitaplik.Entities.DTOs.BookDTOs
 @using System.Net
 @using IKitaplik.Entities.DTOs.UserDTOs
+@using IKitaplik.BlazorUI.Services.Abstract
+@using IKitaplik.BlazorUI.Services.Concrete
