--- a/IKitaplik.BlazorUI/Components/_Imports.razor
+++ b/IKitaplik.BlazorUI/Components/_Imports.razor
@@ -21,3 +21,4 @@
 @using IKitaplik.Entities.DTOs.UserDTOs
 @using IKitaplik.BlazorUI.Services.Abstract
 @using IKitaplik.BlazorUI.Services.Concrete
+@using IKitaplik.Entities.DTOs.UserDTOs
