--- a/IKitaplik.BlazorUI/Components/_Imports.razor
+++ b/IKitaplik.BlazorUI/Components/_Imports.razor
@@ -21,3 +21,7 @@
 @using IKitaplik.Entities.DTOs.UserDTOs
 @using IKitaplik.BlazorUI.Services.Abstract
 @using IKitaplik.BlazorUI.Services.Concrete
+@using IKitaplik.Entities.DTOs.CategoryDTOs
+@using IKitaplik.Entities.DTOs.DepositDTOs
+@using IKitaplik.Entities.DTOs.DonationDTOs
+@using IKitaplik.Entities.DTOs.WriterDTOs
