--- a/IKitaplik.BlazorUI/Components/_Imports.razor
+++ b/IKitaplik.BlazorUI/Components/_Imports.razor
@@ -25,3 +25,4 @@
 @using IKitaplik.Entities.DTOs.DepositDTOs
 @using IKitaplik.Entities.DTOs.DonationDTOs
 @using IKitaplik.Entities.DTOs.WriterDTOs
+@using IKitaplik.BlazorUI.Helpers
