--- a/IKitaplik.BlazorUI/Components/_Imports.razor
+++ b/IKitaplik.BlazorUI/Components/_Imports.razor
@@ -26,3 +26,5 @@
 @using IKitaplik.Entities.DTOs.DonationDTOs
 @using IKitaplik.Entities.DTOs.WriterDTOs
 @using IKitaplik.BlazorUI.Helpers
+@using IKitaplik.Entities.DTOs
+
