--- a/IKitaplik.BlazorUI/Components/Pages/Categories/CategoryAdd.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Categories/CategoryAdd.razor
@@ -10,9 +10,10 @@
     <MudAlert Class="my-3" Severity="Severity.Error">@errorMessage</MudAlert>
 }
 
-<MudTextField T="string" @bind-Value="kategoriAdi" Variant="Variant.Filled" Label="Kategori Adı"/>
+<MudTextField T="string" @bind-Value="kategoriAdi" Variant="Variant.Outlined" Label="Kategori Adı"/>
 <MudButton OnClick="Kaydet" Class="mt-2" Variant="Variant.Filled" ButtonType="ButtonType.Button" EndIcon="@Icons.Material.Filled.Add" Color="Color.Info">Yeni Kayıt Ekle</MudButton>
 <MudButton OnClick="Vazgec" Class="mt-2 ms-1" Variant="Variant.Filled" ButtonType="ButtonType.Button" EndIcon="@Icons.Material.TwoTone.Cancel" Color="Color.Error">Vazgeç</MudButton>
+
 @code {
     string errorMessage = string.Empty;
     string kategoriAdi = string.Empty;
