--- a/IKitaplik.BlazorUI/Components/Pages/Categories/CategoryUpdate.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Categories/CategoryUpdate.razor
@@ -10,7 +10,7 @@
     <MudAlert Class="my-3" Severity="Severity.Error">@errorMessage</MudAlert>
 }
 
-<MudTextField T="string" @bind-Value="kategoriAdi" Variant="Variant.Filled" Label="Kategori Adı" />
+<MudTextField T="string" @bind-Value="kategoriAdi" Variant="Variant.Outlined" Label="Kategori Adı" />
 <MudButton OnClick="Kaydet" Class="mt-2" Variant="Variant.Filled" ButtonType="ButtonType.Button" EndIcon="@Icons.Material.Filled.Save" Color="Color.Warning">Güncelle</MudButton>
 <MudButton OnClick="Vazgec" Class="mt-2 ms-1" Variant="Variant.Filled" ButtonType="ButtonType.Button" EndIcon="@Icons.Material.TwoTone.Cancel" Color="Color.Error">Vazgeç</MudButton>
 @code {
