--- a/IKitaplik.BlazorUI/Components/Pages/Writers/WriterAdd.razor
+++ b/IKitaplik.BlazorUI/Components/Pages/Writers/WriterAdd.razor
@@ -12,7 +12,7 @@
 <MudTextField T="string" @bind-Value="writerName" Variant="Variant.Outlined" Label="Yazar Adı"></MudTextField>
 <MudDatePicker Date="@birthDate" DateChanged="@((DateTime? val) => birthDate = val)" Variant="Variant.Outlined" Label="Doğum Tarihi"></MudDatePicker>
 <MudDatePicker Date="@deathDate" DateChanged="@((DateTime? val) => deathDate = val)" Variant="Variant.Outlined" Label="Ölüm Tarihi"></MudDatePicker>
-<MudTextField AutoGrow @bind-Value="bio" Variant="Variant.Outlined" Label="Biyografi"></MudTextField>
+<MudTextField AutoGrow @bind-Value="bio" Variant="Variant.Outlined" Lines="5" Label="Biyografi"></MudTextField>
 
 <MudButton OnClick="Kaydet" Class="mt-2" Variant="Variant.Filled" ButtonType="ButtonType.Button" EndIcon="@Icons.Material.Filled.Add" Color="Color.Info">Yeni Kayıt Ekle</MudButton>
 <MudButton OnClick="Vazgec" Class="mt-2 ms-1" Variant="Variant.Filled" ButtonType="ButtonType.Button" EndIcon="@Icons.Material.TwoTone.Cancel" Color="Color.Error">Vazgeç</MudButton>
